--- a/index.html
+++ b/index.html
@@ -2,6 +2,6 @@
   <html>
     <body>
       <code>JS PATCH UTILITY</code>
-      <script src="https://example.com/patch.js"></script>
+      <script src="patch.js"></script>
     </body>
   </html>
